2007-05-14	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/isd_server.cpp:
	when doing ItalcAuthChallengeViaAuthFile-authentication, close
	temporary file before requesting response

2007-05-11	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* Makefile.svn:
	fixed automake-call to ignore warnings

	* setup/Makefile.am:
	link Linux-version against static version of library

	* lib/Makefile.am:
	fixed missing resource-file-object in shared library

	* lib/resources/de.ts:
	* lib/resources/de.qm:
	* ica/resources/de.ts:
	* ica/resources/de.qm:
	* ima/resources/de.ts:
	* ima/resources/de.qm:
	updated German localization

2007-05-10	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* Makefile.svn:
	ignore errors (which are not real errors) from automake

	* lib/src/ivs_connection.cpp:
	* ima/src/remote_control_widget.cpp:
	* ima/src/remote_control_widget.h:
	display user-name in toolbar - closes #1711333

	* ima/src/remote_control_widget.cpp:
	* ima/src/remote_control_widget.h:
	added snapshot-functionality in remote-control/view-live mode

	* lib/include/ivs_connection.h:
	* lib/src/ivs_connection.cpp:
	* ima/src/client.cpp:
	moved snapshot-functionality into ivsConnection-class

	* ica/win32/src/vncDesktop.cpp:
	* ica/win32/win32vnc.cpp:
	disabled TightVNC's new terminal-session-support

	* setup/src/dialogs.cpp:
	when copying file add absolute paths to source-file-names
	closes #1704173

2007-05-07	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.ts:
	* ima/resources/it.qm:
	better Italian translation of supporter-role

2007-05-06	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/Makefile.am:
	make library being installed at proper place under Linux

2007-05-02	Dirk Zoellner <dirkzoellner/at/users/dot/sourceforge/dot/net>

	* build_mingw32:
	works now without modifying PATH-variable
	
2007-05-02	Andriano Rino <rino_andr/at/yahoo/dot/it>

	* ica/resources/it.ts: